--- a/style.css
+++ b/style.css
@@ -6,15 +6,14 @@ body{
 table{
 
 	margin: auto;
-	border: 1px solid black;
 	border-collapse: collapse;
 }
 
 td{
 
 	border: 1px solid black;
-	height: 65px;
-	width: 65px;
+	height: 70px;
+	width: 70px;
 	text-align: center;
 	font-size: 22px;
 }
@@ -58,4 +57,9 @@ td{
 	font-size: 12px;
 	text-align: right;
 	vertical-align: top;
+}
+
+#sudokuDiv, #mode{
+
+	margin: .7em;
 }
